<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false">

    <ImageButton
        android:id="@+id/scanner_back_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="top|start"
        android:background="?actionBarItemBackground"
        android:contentDescription="@string/action_back"
        android:text="@string/scan_receipt"
        android:textColor="@color/textPrimary"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/textPrimary" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/scan_qr_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

</FrameLayout>